--- a/springboot-mybatis-mybatisplus/pom.xml
+++ b/springboot-mybatis-mybatisplus/pom.xml
@@ -18,6 +18,7 @@
 		<mybaitsplus.version>2.1.2</mybaitsplus.version>
 		<velocity.version>1.7</velocity.version>
 		<druid.version>1.0.29</druid.version>
+		<swagger.version>2.6.1</swagger.version>
 	</properties>
 	
 	<dependencies>
@@ -64,7 +65,19 @@
             <artifactId>druid</artifactId>
             <version>${druid.version}</version>
         </dependency> -->
-		
+        
+		<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+        
 	</dependencies>
 	
 	<build>
