--- a/springboot-mybatis-mybatisplus/src/main/resources/application.properties
+++ b/springboot-mybatis-mybatisplus/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #mybatis.config-locations=classpath:xml/mybatis-config.xml
-#mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
-mybatis.mapper-locations=classpath:com/shuframework/*/sqlMapperXml/*.xml
+#mybatis.mapper-locations=classpath:sqlMapperXml/*Mapper.xml
+# 配置为classpath: 如果把xml文件当做类，通过main启动，可以读取到，但是通过MockMvc模拟启动，则读取不到，需要配置为classpath*:
+mybatis.mapper-locations=classpath*:com/shuframework/*/sqlMapperXml/*Mapper.xml
 #mybatis.type-aliases-package=com.neo.entity
 
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
@@ -8,5 +9,10 @@ spring.datasource.url = jdbc:mysql://localhost:3306/myoa?useUnicode=true&charact
 spring.datasource.username = root
 spring.datasource.password = root
 
+#这个path就是json的访问request mapping.可以自定义，防止与自身代码冲突。
+springfox.documentation.swagger.v2.path = /api-docs
+
 logging.file = ${user.dir}/log/springboot-mybatis-xml.log
+## 通过logging.config属性指定自定义的名字
+#logging.config=classpath:logging-config.xml
 logging.level.com.shuframework = DEBUG
