--- a/springboot-mybatis-mybatisplus/src/main/resources/application.properties
+++ b/springboot-mybatis-mybatisplus/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 #mybatis.config-locations=classpath:xml/mybatis-config.xml
+# xml文件在src/main/resources下，配置为classpath: 没啥问题
 #mybatis.mapper-locations=classpath:sqlMapperXml/*Mapper.xml
-# 配置为classpath: 如果把xml文件当做类，通过main启动，可以读取到，但是通过MockMvc模拟启动，则读取不到，需要配置为classpath*:
+# xml文件在src/main/java下(把xml文件当做类),如果配置为classpath: 通过main启动，可以读取到，但是通过MockMvc模拟启动，则读取不到，需要配置为classpath*:
+# 由于使用classpath*: 需要遍历所有的classpath，所以加载速度是很慢，那么在测试时用classpath*: 部署运行时改为classpath: 
 mybatis.mapper-locations=classpath*:com/shuframework/*/sqlMapperXml/*Mapper.xml
-#mybatis.type-aliases-package=com.neo.entity
+#mybatis.type-aliases-package=com.shuframework.*.model
 
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/myoa?useUnicode=true&characterEncoding=utf-8
