--- a/springboot-mybatis-mybatisplus/src/main/environment/product/application.properties
+++ b/springboot-mybatis-mybatisplus/src/main/environment/product/application.properties
@@ -17,7 +17,7 @@ springfox.documentation.swagger.v2.path = /api-docs
 logging.file = ${user.dir}/log/springboot-mybatis-xml.log
 ## 通过logging.config属性指定自定义的名字
 #logging.config=classpath:logging-config.xml
-logging.level.com.shuframework = DEBUG
+logging.level.com.shuframework = INFO
 
 
-test.mylog = src/main/resources
+test.mylog = product
