--- a/springboot-mybatis-mybatisplus/src/main/environment/test/application.properties
+++ b/springboot-mybatis-mybatisplus/src/main/environment/test/application.properties
@@ -20,4 +20,4 @@ logging.file = ${user.dir}/log/springboot-mybatis-xml.log
 logging.level.com.shuframework = DEBUG
 
 
-test.mylog = src/main/resources
+test.mylog = test
