--- a/springboot-mybatis-mybatisplus/.settings/org.eclipse.core.resources.prefs
+++ b/springboot-mybatis-mybatisplus/.settings/org.eclipse.core.resources.prefs
@@ -6,6 +6,9 @@ encoding//src/main/environment/test=UTF-8
 encoding//src/main/environment/test/application.properties=UTF-8
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/resources/application-develop.properties=UTF-8
+encoding//src/main/resources/application-product.properties=UTF-8
+encoding//src/main/resources/application-test.properties=UTF-8
 encoding//src/main/resources/application.properties=UTF-8
 encoding//src/test/java=UTF-8
 encoding//src/test/resources=UTF-8
