--- a/springboot-mybatis-mybatisplus/src/main/resources/application.properties
+++ b/springboot-mybatis-mybatisplus/src/main/resources/application.properties
@@ -6,18 +6,16 @@
 mybatis.mapper-locations=classpath*:com/shuframework/*/sqlMapperXml/*Mapper.xml
 #mybatis.type-aliases-package=com.shuframework.*.model
 
-spring.datasource.driver-class-name = com.mysql.jdbc.Driver
-spring.datasource.url = jdbc:mysql://localhost:3306/myoa?useUnicode=true&characterEncoding=utf-8
-spring.datasource.username = root
-spring.datasource.password = root
-
 #这个path就是json的访问request mapping.可以自定义，防止与自身代码冲突。
 springfox.documentation.swagger.v2.path = /api-docs
 
-logging.file = ${user.dir}/log/springboot-mybatis-xml.log
+# 日志部分
+logging.file = log/springboot-mybatis-xml.log
 ## 通过logging.config属性指定自定义的名字
 #logging.config=classpath:logging-config.xml
-logging.level.com.shuframework = DEBUG
+# 不同环境配置的级别不同，移到不同配置文件
+#logging.level.com.shuframework = DEBUG
 
+#上面是不同配置的相同部分，不同部分写在不同配置文件通过spring.profiles.active来指定环境，注意这个值需要与文件名相同
+spring.profiles.active = test
 
-test.mylog = src/main/resources
