--- a/springboot-init/pom.xml
+++ b/springboot-init/pom.xml
@@ -20,40 +20,23 @@
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<!-- <javax-servlet.version>3.1.0</javax-servlet.version>
-		<spring.version>4.3.11.RELEASE</spring.version> -->
-		<mybaitsplus.version>2.1.2</mybaitsplus.version>
-		<druid.version>1.0.29</druid.version>
-		<mysql.version>5.1.44</mysql.version>
-		<!-- mysql 6.0.6有改动，需注意http://blog.csdn.net/xxpp688/article/details/52754554
-		<mysql.version>6.0.6</mysql.version> -->
-		<httpclient.version>4.5.2</httpclient.version>
-		<!-- <quartz.version>2.2.2</quartz.version> -->
-		<quartz.version>2.3.0</quartz.version>
-		<cxf.version>3.1.7</cxf.version>
-		<joda-time.version>2.9.9</joda-time.version>
+		<swagger.version>2.6.1</swagger.version>
+		
 		<fastjson.version>1.2.7</fastjson.version>
 		<gson.version>2.2.4</gson.version>
-		<poi.version>3.12</poi.version>
 		<slf4j-api.version>1.7.25</slf4j-api.version>
 		<log4j2.version>2.8.2</log4j2.version>
 		<logback.version>1.2.3</logback.version>
-		
-		<commons-io.version>2.5</commons-io.version>
-		<commons-fileupload.version>1.3.2</commons-fileupload.version>
-		<commons-net.version>3.6</commons-net.version>
-		<!-- <commons-net.version>3.3</commons-net.version> -->
 
 		<!-- 2.3.26-incubating是新版，可能与2.3.23 会不同 -->
 		<freemarker.version>2.3.23</freemarker.version>
 		<!-- 不在更新的jar(开始) -->
-		<velocity.version>1.7</velocity.version>
+		<!-- <velocity.version>1.7</velocity.version>
 		<commons-codec.version>1.10</commons-codec.version>
 		<mail.version>1.4.7</mail.version>
 		<log4j.version>1.2.17</log4j.version>
 		<dom4j.version>1.6.1</dom4j.version>
-		<jxl.version>2.6.12</jxl.version>
-		<junit.version>4.12</junit.version>
+		<jxl.version>2.6.12</jxl.version> -->
 		<!-- 不在更新的jar(结束) -->
 	</properties>
 	
@@ -69,16 +52,29 @@
 		</dependency>
 		
 		<dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+		
+		<dependency>
 			<groupId>com.shuframework</groupId>
 			<artifactId>shu-core</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		
+		<!-- 
 		<dependency>
 		    <groupId>org.apache.velocity</groupId>
 		    <artifactId>velocity</artifactId>
 		    <version>${velocity.version}</version>
 		</dependency>
-
 		<dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus</artifactId>
@@ -87,13 +83,13 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <!-- <version>${mysql.version}</version> -->
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
             <version>${druid.version}</version>
         </dependency>
+         -->
 		
 	</dependencies>
 </project>
