--- a/springboot-mybatis-mybatisplus/src/main/resources/application.properties
+++ b/springboot-mybatis-mybatisplus/src/main/resources/application.properties
@@ -17,5 +17,7 @@ logging.file = log/springboot-mybatis-xml.log
 #logging.level.com.shuframework = DEBUG
 
 #上面是不同配置的相同部分，不同部分写在不同配置文件通过spring.profiles.active来指定环境，注意这个值需要与文件名相同
-spring.profiles.active = test
+spring.profiles.active = develop
+#spring.profiles.active = test
+#spring.profiles.active = product
 
