--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -9,4 +9,6 @@ spring.datasource.username = root
 spring.datasource.password = root
 
 logging.file = ${user.dir}/log/springboot-mybatis-xml.log
-logging.level.com.shuframework = DEBUG
+## \u901A\u8FC7logging.config\u5C5E\u6027\u6307\u5B9A\u81EA\u5B9A\u4E49\u7684\u540D\u5B57
+#logging.config=classpath:log4j2-spring.xml
+#logging.level.com.shuframework = DEBUG
