--- a/springboot-mybatis/pom.xml
+++ b/springboot-mybatis/pom.xml
@@ -33,6 +33,7 @@
 		<slf4j-api.version>1.7.25</slf4j-api.version>
 		<log4j2.version>2.8.2</log4j2.version>
 		<logback.version>1.2.3</logback.version>
+		<swagger.version>2.6.1</swagger.version>
 		
 		<commons-io.version>2.5</commons-io.version>
 		<commons-fileupload.version>1.3.2</commons-fileupload.version>
@@ -53,14 +54,25 @@
 	</properties>
 	
 	<dependencies>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions><!-- 去掉默认配置 -->  
+	            <exclusion>  
+	                <groupId>org.springframework.boot</groupId>  
+	                <artifactId>spring-boot-starter-logging</artifactId>  
+	            </exclusion>  
+	        </exclusions>
 		</dependency>
+		<!-- 引入log4j2依赖 -->  
+		<dependency>
+	        <groupId>org.springframework.boot</groupId>  
+	        <artifactId>spring-boot-starter-log4j2</artifactId>  
+	    </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -106,6 +118,19 @@
             <artifactId>druid</artifactId>
             <version>${druid.version}</version>
         </dependency> -->
+		
+		<!-- Swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>${swagger.version}</version>
+        </dependency>
 		
 	</dependencies>
 	
